--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     }
 
     .brand{ display:flex; align-items:center; justify-content:center; gap:16px; margin: 24px 0 16px; filter: drop-shadow(0 0 24px rgba(9,245,255,0.25)); }
-    .brand .name{ font-family: Orbitron, Inter, sans-serif; font-weight:800; letter-spacing:0.08em; text-transform:uppercase; }
+    .brand .name{ font-family: Orbitron, Inter, sans-serif; font-weight:800; letter-spacing:0.08em; text-transform:uppercase; font-size: 1.15em; }
     .event-info{ 
       color: var(--muted); 
       font-size: clamp(13.8px, 1.61vw, 18.4px); 
@@ -206,4 +206,5 @@
   </script>
 </body>
 </html>
+
 
