--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       webkit-playsinline
       muted
       preload="auto">
-      <source src="assets/promo.mp4" type="video/mp4" />
+      <source src="https://dcaaai.blob.core.windows.net/videos/promo.mp4" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
   </div>
